# piscine-rust

./: LICENSE  README.md  STORY.md  module-00.md  module-01.md  module-02.md  module-03.md  module-04.md  module-05.md  module-06.md  module-07.md  module-08.md  module-09.md  module-10.md  module-11.md  module-12.md  module-cell.md  module-monads.md  module-threads.md  module-traits.md
answers/module00/: .gitignore
answers/module00/ex01/: min.rs
answers/module00/ex02/: collatz.rs  print_bytes.rs
answers/module00/ex03/: fizzbuzz.rs
answers/module00/ex04/: Cargo.toml
answers/module00/ex04/src/: other.rs  overflow.rs
answers/module00/ex05/: Cargo.toml
answers/module00/ex06/: Cargo.toml
answers/module00/ex07/: Cargo.toml
answers/module01/: Cargo.toml
answers/module01/ex00/: Cargo.toml
answers/module01/ex01/: Cargo.toml
answers/module01/ex02/: Cargo.toml
answers/module01/ex03/: Cargo.toml
answers/module01/ex04/: Cargo.toml
answers/module01/ex05/: Cargo.toml
answers/module01/ex06/: Cargo.toml
answers/module01/ex07/: Cargo.toml
answers/module02/: Cargo.toml
answers/module02/ex00/: Cargo.toml
answers/module02/ex01/: Cargo.toml
answers/module02/ex02/: Cargo.toml
answers/module02/ex03/: Cargo.toml
answers/module02/ex04/: Cargo.toml
answers/module02/ex05/: Cargo.toml
answers/module02/ex06/: Cargo.toml
answers/module02/ex07/: Cargo.toml
answers/module03/: Cargo.toml
answers/module03/ex00/: Cargo.toml
answers/module03/ex01/: Cargo.toml
answers/module07/: Cargo.toml
example/m00/: .gitignore
example/m01/: Cargo.toml
(+101 files in other folders)
